added option parsing and options tests

--- a/src/vbeVBComponent.cls
+++ b/src/vbeVBComponent.cls
@@ -16,6 +16,7 @@ Attribute VB_Exposed = False
 Option Explicit
 
 Private m_baseObject As VBComponent
+Private m_OptionParser As vbeOptionParser
 
 ' ## Properties
 
@@ -30,4 +31,39 @@ End Property
 ' Set the base object
 Public Property Set baseObject(baseObject As VBComponent)
   Set m_baseObject = baseObject
+  
+  ' run the option parser as soon as the baseObject is set
+  With m_baseObject.CodeModule
+    m_OptionParser.parse .Lines(1, .CountOfLines)
+  End With ' codeModule
 End Property
+
+' Return the options hash
+Public Property Get options() As Dictionary: Set options = m_OptionParser.options: End Property
+
+' ## Constructor/Destructor
+
+' Instantiate objects and set defaults
+Private Sub Class_Initialize()
+  Set m_OptionParser = New vbeOptionParser
+  
+  buildOptionSet
+End Sub
+
+' ## Private Members
+
+' Build the option set for all Components
+Private Sub buildOptionSet()
+  ' add the no-reload option
+  ' this flag, when present, prevents the module from reloading
+  m_OptionParser.addOption "no-reload", typename:="bool", default:=False
+  
+  ' add the no-export option
+  ' this flag, when present, prevents the module from exporting
+  m_OptionParser.addOption "no-export", typename:="bool", default:=False
+  
+  ' add the relative-path string option
+  ' this tells the addin to save the component to / load the component
+  ' from this path, relative to the parent workbook
+  m_OptionParser.addOption "relative-path", typename:="string", default:=""
+End Sub
