--- a/vba/vbeOptionParser.cls
+++ b/vba/vbeOptionParser.cls
@@ -8,6 +8,7 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 '#RelativePath = vba
+'! relative-path vba
 
 ' OptionParsers check a string for specific phrases
 ' and stores them for use later
