moved option token constant out of vbeOptionParser to remove external dependency

--- a/vba/vbeOptionParser.cls
+++ b/vba/vbeOptionParser.cls
@@ -40,7 +40,7 @@ Private Sub Class_Initialize()
   Set m_Options = New Dictionary
   
   ' set default optionToken from the config
-  optionToken = OPTION_TOKEN
+  optionToken = "'!"
 End Sub
 
 ' ## Public Members
